ctnet/css/can.css
/* ... */
#mobile_search {
    width: 90%;
}

#mobile_search_node {
    display: block;
    height: 35px;
    margin-right: 65px;
    margin-left: 65px;
}

#mobile_search_node div {
    display: block;
    margin-top: -5px;
}

#top_buttons {
    top: 3px;
}

#bottom_buttons {
    bottom: 30px;
}

#resize_btn, #mobile_menu_btn {
    cursor: pointer;
    position: absolute;
    top: 5px;
    z-index: 10;
}

#resize_btn {
    left: 5px;
}

#mobile_menu_btn {
    right: 5px;
}

#resize_btn div, #mobile_menu_btn div {
    background: rgba(255, 255, 255, 0.75);
}

#home_featured {
    background-image:url('/img/home/HOME_FEATURED_AREA_BKGRND.gif');
    width: 890px;
    height: 339px;
    color: white;
    font-size: 85%;
}

#home_signup_share {
    background-image:url('/img/home/HOME_SIGN_UP_AND_SHARE_BAR.gif');
    width: 900px;
    height: 23px;
    padding-top: 8px;
    color: white;
    font-style: italic;
    font-size: 85%;
    padding-left: 25px;
    padding-right: 25px;
}

#home_signup_share a {
    color: white;
}

#home_bluebar {
    background-image:url('/img/home/BLUE_BAR.gif');
    width: 866px;
    height: 25px;
    padding-top: 6px;
    color: white;
    margin-left: auto;
    margin-right: auto;
}

/* opacity stuff:
    - http://www.quirksmode.org/css/opacity.html
    - http://htmlcssjavascript.com/css/cross-browser-opacity-using-css-and-internet-explorer-custom-filters/
 */
#all {
    -webkit-transform: scale(1);
    -webkit-transform-origin: 50% 0%;
    position: relative;
    word-wrap: break-word;
    width: 950px;
    padding: 8px;
    margin-left: auto;
    margin-right: auto;
    opacity: 0;
    -moz-opacity: 0;
    -khtml-opacity: 0;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity = 0);
    overflow: hidden;
}

#header {
    background-image: url('/img/header/Header_Grey_Rule.gif');
    padding: 15px;
    height: 110px;
}

#header a {
    color: gray;
}

#header img {
    padding: 5px;
}

#navigation_bar {
    height: 31px;
}

#welcome_bar {
    background-image: url('/img/header/Top_Red_Member_Bar.gif');
/*    height: 31px;*/
    height: 23px;
    padding-top: 8px;
    color: white;
    font-size: 85%;
    padding-left: 20px;
    padding-right: 30px;
}

#welcome_bar a {
    color: white;
    font-weight: bold;
}

#footer {
    color: gray;
    font-size: 75%;
    padding-left: 100px;
    padding-right: 250px;
    padding-top: 40px;
}

#footer a {
    color: gray;
}

#refarea img {
    display: inline;
}

#searchhelpbox {
    width: 500px;
    border: 1px solid black;
    background: white;
    padding: 10px;
    font-size: 80%;
}

#advancedsearchbox {
    width: 400px;
    border: 1px solid black;
    background: white;
    padding: 10px;
    font-size: 80%;
}

#basicsearch {
    height: 13px;
    border: 0px;
    outline: none;
    border-top: 1.5px solid #c2c5cc;
/*    border-bottom: 1.5px solid #8f9094;
    border-left: 1.5px solid #adadad;
    border-right: 0px;*/
    background-image: url('/img/header/search_gradient.gif');
    background-repeat: repeat-x;
    background-position: bottom;
}

#searchcolumn ul {
    margin-left: 5px;
    padding-left: 5px;
}

#photo img {
    max-width: 350px;
    max-height: 200px;
    margin-left: auto;
    margin-right: auto;
}

#userthoughts img {
    width: 400px;
}

#sbcontentMap {
    height: 500px;
}

.fill {
    width: 100%;
    height: 100%;
}

/*.basictable {
    display: block;
}*/

.basictable td {
    vertical-align: top;
    font-size: 85%;
}

.basictable img {
    display: block;
    padding-top: 5px;
    padding-bottom: 5px;
/*    margin-left: auto;
    margin-right: auto;*/
}

.basictable a {
/*    color: gray;*/
}

.searchresults {
    width: 612px;
}

.red {
    color: #670002;
}

.betared {
    color: #c00000;
}

.betablue {
    color: #0070c0;
}

#betalogin {
    position: absolute;
    bottom: 5px;
    width: 100px;
}

#betamessage {
    font-family: "CopperplateGothicBoldRegular";
    color: darkgray;
    margin-bottom: 10px;
}

#betaphrase {
    font-size: 100%;
}

#betadate {
    font-size: 120%;
}

.activetab a {
    color: #670002;
}

.lightgray {
    color: lightgray;
}

.changegray {
    color: black;
}

.black {
    color: black;
}

.green {
    color: green;
}

.box {
    border-right: 2px solid #d3d3d3;
    border-left: 2px solid #d3d3d3;
    padding: 25px;
}

.boxbottom {
    border-bottom: 2px solid #d3d3d3;
}

.bottomline {
    border-bottom: 1px solid gray;
}

.newstitle {
    border-bottom: 8px solid #d3d3d3;
    margin-bottom: 10px;
}

#newslist {
    text-align: justify;
/*    padding-right: 15px;*/
}

#caselist {
    text-align: justify;
/*    padding-right: 15px;*/
}

.whitestroke {
    -webkit-text-stroke: 1px white;
}

#chatterbox img {
    max-width: 100%;
}

#topz {
    font-size: 120%;
}

#topz a {
     text-decoration: none;
}

#topz tr:nth-child(even) {
    background-color: #e6eaed;
}

#topz td {
    min-width: 88px;
}

#topz tr:not(:first-child) td:nth-child(3),
#topz tr:not(:first-child) td:first-child,
#topz tr:not(:first-child) td:nth-child(4) {
    text-align: center;
}

#topz tr:not(:first-child) td:nth-child(5),
#topz tr:not(:first-child) td:nth-child(6) {
    text-align: right;
}

#forum, #forum > div, #forum > div > div {
    position: relative;
}

#topz, #forum {
    width: 950px;
    height: 300px;
    border-left: 1px solid #d3d3d3;
    border-right: 1px solid #d3d3d3;
    box-sizing: border-box;
}

#forum > div {
    height: 100%;
}

#forum > div > div {
    display: inline-block;
    width: 25%;
    height: 100%;
    padding: 10px;
    vertical-align: top;
    box-sizing: border-box;
}

#forum > div > div > div:nth-child(2) {
    height: calc(100% - 30px);
    overflow-y: auto;
}
/* ... */

